# Secure_Delivery

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeQL.yml
app/: main.py
tests/: basic_test.py
