[project]
name = "secure_delivery"
version = "0.1.0"
description = "Mise en place de la sécurité dans le cycle de delivery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.95.0",
    "jinja2>=3.0.2",
    "pytest>=8.0.0",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]