[project]
name = "secure_delivery"
version = "0.1.0"
description = "Mise en place de la sécurité dans le cycle de delivery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.0",
    "jinja2==2.10",
    "uvicorn==0.21.1",
    "python-multipart==0.0.5",
]

[dependency-groups]
dev = [
    "pytest==8.0.0",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]